UI improvements, mainly on footer.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -103,7 +103,7 @@
 
 <!-- fourth section - Information -->
 
-<div id="information" class="pad-section">
+<div id="information" class="pad-section" style="height:250px;">
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
@@ -123,8 +123,8 @@
                         <h2 class="panel-title">How to start?</h2>
                     </div>
                     <div class="panel-body lead">
-                      <p>  <b>Charities</b> -- Register online or call our support line 1-800-296-GIVE
-	                  <b>Donators</b> -- Register online and download the app. </p>
+                      <b>Charities</b> -- Register online or call our support line 1-800-296-GIVE
+	                  <p><b>Donators</b> -- Register online and download the app.
                     </div>
                 </div>
             </div>
@@ -133,7 +133,6 @@
 </div>
 <!-- /fourth section -->
 <%include layout/footer.ejs%>
-
 <script language="JavaScript">
     function getHotCharites(){
 
@@ -195,13 +194,7 @@
 
         })
     }
-
-
-
 </script>
-
-
-
 
 <!-- /footer -->
 
