--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -1,49 +1,63 @@
-﻿
-﻿<footer>
+﻿<footer style="background:#515151;">
     <style>
         ul {
             display: block;
             list-style-type: none;
-
-        }
-        a{
-            color : black;
-
         }
     </style>
-    <hr/>
     <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-
+	<hr style="color:white"/>
+        <div class="row" style="color:white;">
+            <div class="col-md-3">
              <ul>
-                 <li><a href="/">WillGive</a></li>
-
+                 <li><b>Company</b></li>
+				 <li> &nbsp;</li>
                  <li><a href="/aboutus">About Us</a></li>
                  <li><a href="/contactus">Contact Us</a></li>
                  <li><a href="/Privacy">Privacy</a></li>
                  <li><a href="/terms">Terms of Service</a></li>
              </ul>
             </div>
-
-            <div class="col-md-4">
-
+            <div class="col-md-3">
                 <ul>
-                    <li><a href="/charities/listCharities">Charities</a></li>
-                    <li><a href="/recipient/signup">Charity Register</a></li>
-                    <li><a href="/charities/listCharities">Charity Sponsor</a></li>
-
-                </ul>
-
-            </div>
-
-            <div class="col-md-4">
-                <ul>
-                    <li><a href="#">Campaigns</a></li>
-
-
+				    <li><b>Charity</b></li>
+				    <li> &nbsp;</li>
+                    <li><a href="/recipient/signup">Register</a></li>
+					<li><a href="/recipient/login">Manager Login</a></li>
                 </ul>
             </div>
-        </div>
+            <div class="col-md-3">
+                <ul>
+				    <li><b>Campaigns</b></li>
+				    <li> &nbsp;</li>
+                    <li><a href="/campaign/signup">Register</a></li>
+					<li><a href="/campaign/login">Manager Login</a></li>
+                </ul>
+            </div>
+            <div class="col-md-3">
+                <ul>
+				    <li><b>Contributors</b></li>
+				    <li> &nbsp;</li>
+                    <li><a href="/login/signup">Sign up</a></li>
+					<li><a href="/login/signin">Sign in</a></li>
+					<li><a href="/charities/listCharities">List of Charities</a></li>
+					<li><a href="/campaign/listCampaigns">List of Campaigns</a></li>
+                </ul>
+            </div>
+			</div>
+			<hr style="color:white"/>
+			<div class="row" style="color:white">			
+				<div class="col-md-6">
+				<img src='/images/icon.png'> &copy; WillGive LLC. 	
+				</div>
+			    <div class="col-md-6" align=right>
+				<a href="https://itunes.apple.com/us/app/uber/id368677368?mt=8"
+					target="_blank" style="background:transparent url(/images/appButton.png) no-repeat left top;display:inline-block;width:96px;height:28px;"></a>
+				<a href="https://play.google.com/store/apps/details?id=com.ubercab"
+					target="_blank" style="background:transparent url(/images/appButton.png) no-repeat left -30px;display:inline-block;width:96px;height:28px;"></a>
+				<a href="https://www.windowsphone.com/s?appid=b905a877-bd55-4ce7-a7aa-467cdc3a21f4"
+					target="_blank" style="background:transparent url(/images/appButton.png) no-repeat left -60px;display:inline-block;width:96px;height:28px;"></a>
+				</div>
+			</div>
     </div>
 </footer>
