--- a/views/layout/navbar.ejs
+++ b/views/layout/navbar.ejs
@@ -12,25 +12,18 @@
         <% 
          var menuClass = new Array("#", "#","#","#","#","#", "#", "#", "#");
          if(activeMenu == "Home") menuClass[0] = "active";
-         if(activeMenu == "About") menuClass[1] = "active";
-         if(activeMenu == "Contact") menuClass[2] = "active";
+         if(activeMenu == "Charities") menuClass[1] = "active";
+         if(activeMenu == "Enquiry") menuClass[2] = "active";
          if(activeMenu == "SignIn") menuClass[3] = "active";
          if(activeMenu == "SignUp") menuClass[4] = "active";
-         if(activeMenu == "Charities") menuClass[5] = "active";
-         if(activeMenu == "Enquiry") menuClass[6] = "active";
-		 if(activeMenu == "Terms") menuClass[7] = "active";
-		 if(activeMenu == "Privacy") menuClass[8] = "active";
+		 if(activeMenu == "CharitySignIn") menuClass[5] = "active";
 
         %>
         <div class="collapse navbar-collapse" id="exampleNavbarCollapse">
             <ul class="nav navbar-nav">
                 <li class="<%=menuClass[0]%>"><a href="/">WillGive</a></li>
-                <li class="<%=menuClass[5]%>"><a href="/charities/listCharities">Charities</a></li>
-                <li class="<%=menuClass[6]%>"><a href="/search">Donation Tracking</a></li>
-                <li class="<%=menuClass[1]%>"><a href="/aboutus">About Us</a></li>
-                <li class="<%=menuClass[2]%>"><a href="/contactus">Contact Us</a></li>
-				<li class="<%=menuClass[8]%>"><a href="/Privacy">Privacy</a></li>
-				<li class="<%=menuClass[7]%>"><a href="/terms">Terms of Service</a></li>
+                <li class="<%=menuClass[1]%>"><a href="/charities/listCharities">Charities</a></li>
+                <li class="<%=menuClass[2]%>"><a href="/search">Donation Tracking</a></li>
             </ul>
             <form class="nav navbar-nav navbar-form" action="/charities/searchCharities" method="get" role="search">
                 <div class="input-group">
@@ -41,10 +34,10 @@
                 </div>
             </form>
             <% if ( 'undefined' == typeof user || user == null ) { %>
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav navbar-right" style="padding-right:15px;">
                 <li class="<%=menuClass[3]%>"><a href="/login/signin">SignIn</a></li>
                 <li class="<%=menuClass[4]%>"><a href="/login/signup">SignUp</a></li>
-                <li><a href="/recipient/login">Chairty SignIn</a></li>
+                <li class="<%=menuClass[5]%>"><a href="/recipient/login">Chairty SignIn</a></li>
             </ul>
             <% } else if( 'recipient' != user.provider ){ %>
             <ul class="nav navbar-nav navbar-right">
