--- a/views/recipientLogin/recipientLogin.ejs
+++ b/views/recipientLogin/recipientLogin.ejs
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/assets/css/customJqueryValidation.css">
 
 
-    <%activeMenu = "SignIn"%>
+    <%activeMenu = "CharitySignIn"%>
     <%include ../layout/navbar.ejs%>
 </head>
 <body>
