--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -4,6 +4,14 @@
             display: block;
             list-style-type: none;
         }
+        footer a{
+            color: white;
+            text-decoration: none;
+        }
+        footer a:hover {
+
+            color: white;
+        }
     </style>
     <div class="container">
 	<hr style="color:white"/>
