--- a/views/charity/charityList.ejs
+++ b/views/charity/charityList.ejs
@@ -51,14 +51,14 @@
        	;
        	<% } else { %>		
 		  if(transaction.isFavored == 'Y')
-			favIcon = "<a style=\"cursor:hand; cursor:pointer\"  onClick=\"flipFav('" + transaction.recipient_id + "')\"><img src='/images/fav2.png' id=img" + transaction.recipient_id +" border=0 width=30 height=27></a>";
+			favIcon = "<a style=\"cursor:hand; cursor:pointer\"  onClick=\"flipFav('" + transaction.recipientId + "')\"><img src='/images/fav2.png' id=img" + transaction.recipientId +" border=0 width=30 height=27></a>";
 		 else
-		    favIcon = "<a style=\"cursor:hand; cursor:pointer\" onClick=\"flipFav('" + transaction.recipient_id + "')\"><img src='/images/fav.png' id=img" + transaction.recipient_id +" border=0 width=30 height=27></a>";
+		    favIcon = "<a style=\"cursor:hand; cursor:pointer\" onClick=\"flipFav('" + transaction.recipientId + "')\"><img src='/images/fav.png' id=img" + transaction.recipientId +" border=0 width=30 height=27></a>";
 		<%}%>
 			
-        return defaultHTML.replace("{name}","<a style=\"color: #202090;\" href='/charity/" + transaction.recipient_id + "'>" + transaction.name + "</a>" )
+        return defaultHTML.replace("{name}","<a style=\"color: #202090;\" href='/charity/" + transaction.recipientId + "'>" + transaction.name + "</a>" )
 		.replace("{ICONS}","<a style=\"color: #202090;\" href='" + website + "' target='_blank'><img src='/images/web.png' border=0 width=20 height=20></a>"  + favIcon)
-                .replace("{EIN}",transaction.EIN)
+                .replace("{EIN}",transaction.ein)
                 .replace("{City}",transaction.city)
 		.replace("{State}",transaction.state)
                 .replace("{Phone}",transaction.phone)
