--- a/views/search.ejs
+++ b/views/search.ejs
@@ -24,6 +24,7 @@
 
     <script src="/jqgrid/js/minified/jquery.jqGrid.min.js" type="text/javascript"></script>
 
+    <!-- please use the css in bower component or download it-->
     <link rel="stylesheet" type="text/css" media="screen" href="http://trirand.com/blog/jqgrid/themes/redmond/jquery-ui-custom.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="http://trirand.com/blog/jqgrid/themes/ui.jqgrid.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="http://trirand.com/blog/jqgrid/themes/ui.multiselect.css" />
@@ -98,18 +99,18 @@
                         jQuery("#listResult").jqGrid({
                             datatype: "local",
                             data: transactions,
-                            colNames: ['transaction_id', 'amount', 'user_id', 'recipient_id', 'dateTime', 'notes'],
+                            colNames: ['transactionId', 'amount', 'userId', 'recipientId', 'datetime', 'notes'],
                             colModel: [
-                                {name: 'transaction_id', index: 'transaction_id', align: "center", editable: true, sortable: true},
+                                {name: 'transactionId', index: 'transactionId', align: "center", editable: true, sortable: true},
                                 {name: 'amount', index: 'amount', align: "center", editable: true, sortable: true},
-                                {name: 'user_id', index: 'user_name', align: "center", editable: true, sortable: true},
-                                {name: 'recipient_id', index: 'recipient_name', align: "center", editable: true, sortable: true},
-                                {name: 'dateTime', index: 'dateTime', align: "center", editable: true, sortable: true},
+                                {name: 'userId', index: 'userName', align: "center", editable: true, sortable: true},
+                                {name: 'recipientId', index: 'recipientName', align: "center", editable: true, sortable: true},
+                                {name: 'datetime', index: 'datetime', align: "center", editable: true, sortable: true},
                                 {name: 'notes', index: 'notes', align: "center", editable: true, sortable: true}
                             ],
                             rowNum: 10,
                             rowList: [10, 20, 30],
-                            sortname: 'transaction_id',
+                            sortname: 'transactionId',
                             viewrecords: true,
                             sortorder: "desc",
                             caption: "donation listings",
