--- a/views/recipientLogin/recipientSignUp.ejs
+++ b/views/recipientLogin/recipientSignUp.ejs
@@ -289,7 +289,7 @@
         recipientSignUpForm.email = $('#signupEmail').val();
         recipientSignUpForm.password = $('#signupPassword').val();
         recipientSignUpForm.name = $('#signupName').val();
-        recipientSignUpForm.EIN = $('#signupEIN').val();
+        recipientSignUpForm.ein = $('#signupEIN').val();
         recipientSignUpForm.address = $('#signupAddress').val();
         recipientSignUpForm.city = $('#signupCity').val();
         recipientSignUpForm.state = $('#signupState').val();
