--- a/views/search.ejs
+++ b/views/search.ejs
@@ -87,11 +87,11 @@
                     console.dir(transactions);
                     /*
                      var tra = [
-                     {transaction_id: "11", amount: "20", user_name: "michael", recipient_name: "redCross", date: "2012-1-2", notes: "test"}
+                     {transactionId: "11", amount: "20", user_name: "michael", recipient_name: "redCross", date: "2012-1-2", notes: "test"}
                      ];
                      alert("transactionId" + jQuery("#transactionId").val());
                      if (jQuery("#transactionId").val() == 1) {
-                     tra.push({transaction_id: "2", amount: "20", user_name: "michael", recipient_name: "redCross", date: "2012-1-2", notes: "test"});
+                     tra.push({transactionId: "2", amount: "20", user_name: "michael", recipient_name: "redCross", date: "2012-1-2", notes: "test"});
                      }*/
                     //setGridParam({'postData': data});
 
@@ -128,12 +128,12 @@
             /*
             $(function() {
                 console.log("search transaction Now");
-                transactions=[{transaction_id:"1",amount:"20",user_name:"michael", recipient_name:"redCross",date:"2012-1-2",notes:"test"}];
+                transactions=[{transactionId:"1",amount:"20",user_name:"michael", recipient_name:"redCross",date:"2012-1-2",notes:"test"}];
 
-                transactions.push({transaction_id:"2",amount:"20",user_name:"michael", recipient_name:"redCross",date:"2012-1-2",notes:"test"});
-                transactions.push({transaction_id:"3",amount:"20",user_name:"michael", recipient_name:"redCross",date:"2012-1-2",notes:"test"});
-                transactions.push({transaction_id:"4",amount:"20",user_name:"michael", recipient_name:"redCross",date:"2012-1-2",notes:"test"});
-                transactions.push({transaction_id:"5",amount:"20",user_name:"michael", recipient_name:"redCross",date:"2012-1-2",notes:"test"});
+                transactions.push({transactionId:"2",amount:"20",user_name:"michael", recipient_name:"redCross",date:"2012-1-2",notes:"test"});
+                transactions.push({transactionId:"3",amount:"20",user_name:"michael", recipient_name:"redCross",date:"2012-1-2",notes:"test"});
+                transactions.push({transactionId:"4",amount:"20",user_name:"michael", recipient_name:"redCross",date:"2012-1-2",notes:"test"});
+                transactions.push({transactionId:"5",amount:"20",user_name:"michael", recipient_name:"redCross",date:"2012-1-2",notes:"test"});
 
                 //jQuery("#listResult").jqGrid('navGrid',"#pagerResults",{edit:false,add:false,del:true});
                 // jQuery("#listResult").jqGrid('inlineNav',"#pagerResults");
