--- a/views/charity/charityEdit.ejs
+++ b/views/charity/charityEdit.ejs
@@ -80,9 +80,9 @@
                     </div>
                 </div>
                 <div class="form-group" style="padding-bottom: 1%">
-                    <label class="control-label col-xs-4" for="EIN">EIN</label>
+                    <label class="control-label col-xs-4" for="ein">EIN</label>
                     <div class="input-group col-xs-7"  >
-                        <input type="text" id="EIN" name="EIN" class="form-control"  required>
+                        <input type="text" id="ein" name="ein" class="form-control"  required>
                     </div>
                 </div>
                 <div class="form-group" style="padding-bottom: 1%">
@@ -347,7 +347,7 @@
         //validClass: "my-valid-class",
         rules: {
             name: "required",
-            EIN: "required",
+            ein: "required",
             category: "required",
             address: "required",
             city: "required",
@@ -386,7 +386,7 @@
         var recipientUpdateForm = {};
         recipientUpdateForm.email = $('#email').val();
         recipientUpdateForm.name = $('#name').val();
-        recipientUpdateForm.EIN = $('#EIN').val();
+        recipientUpdateForm.ein = $('#ein').val();
         recipientUpdateForm.address = $('#address').val();
         recipientUpdateForm.city = $('#city').val();
         recipientUpdateForm.state = $('#state').val();
@@ -488,7 +488,7 @@
         $.get('/services/charityById/'+userId, function(data){
             charity = data;
             console.dir(data);
-            $('#EIN').val(charity.ein);
+            $('#ein').val(charity.ein);
             $('#category').val(charity.category);
             $('#website').val(charity.website);
             $('#facebookPage').val(charity.facebookUrl);
@@ -496,7 +496,7 @@
             $('#city').val(charity.city);
             $('#state').val(charity.state);
             $('#country').val(charity.country);
-            $('#zipCode').val(charity.zipcode);
+            $('#zipCode').val(charity.zipCode);
             $('#phone').val(charity.phone);
             $('#fax').val(charity.fax);
             $('#contactPersonName').val(charity.contactPersonName);
