--- a/views/charity/hotCharities.ejs
+++ b/views/charity/hotCharities.ejs
@@ -78,7 +78,7 @@
 
     var defaultHTML =
         '<tr> <td> {name} </td> '+
-        ' <td> {EIN} </td> ' +
+        ' <td> {ein} </td> ' +
         ' <td> {City} </td> ' +
         ' <td> {State} </td> ' +
         ' <td> {Phone} </td> ' +
@@ -91,7 +91,7 @@
 		if(website.indexOf("http:") == -1)
 			website = "http://" + website;
         return defaultHTML.replace("{name}",transaction.name)
-                .replace("{EIN}",transaction.ein)
+                .replace("{ein}",transaction.ein)
                 .replace("{City}",transaction.city)
 		.replace("{State}",transaction.state)
                 .replace("{Phone}",transaction.phone)
