add pledge page under contribution page

--- a/views/login/userPledges.ejs
+++ b/views/login/userPledges.ejs
@@ -47,7 +47,7 @@
 
         <!-- main area -->
         <div class="col-xs-12 col-sm-9" data-spy="scroll" style="padding-left: 5%" data-target="#sidebar-nav">
-            <h2 class="sub-header">My Contributions</h2>
+            <h2 class="sub-header">My Pledges</h2>
             <div id="page" ></div>
 
             <div id="resultsContainer" class="">
@@ -72,7 +72,7 @@
             </div>
             <div id="botPage" style="float: left"></div>
             <div id="noresult" style="display: none" >
-                <h3>Sorry, you have no contribution yet</h3>
+                <h3>Sorry, you have no pledges yet</h3>
             </div>
 
         </div><!-- /.col-xs-12 main -->
