--- a/views/layout/navbar.ejs
+++ b/views/layout/navbar.ejs
@@ -52,6 +52,7 @@
                         <li><a href="/users/settings">Settings</a></li>
                         <li><a href="/users/paymentMethod">Payment Method</a></li>
                         <li><a href="/users/contribution">My Contributions</a></li>
+                        <li><a href="/users/pledge">My Pledges</a></li>
                         <li><a href="/users/collections">My Favorites</a></li>
                         <li class="divider"></li>
                         <li><a href="/login/logout">Logout</a></li>
