--- a/views/login/userProfile.ejs
+++ b/views/login/userProfile.ejs
@@ -53,6 +53,9 @@
                         <a href="/users/contribution" style="color: #000000;">My Contributions</a>
                     </li>
                     <li>
+                        <a href="/users/pledge" style="color: #000000;">My Pledges</a>
+                    </li>
+                    <li>
                         <a href="/users/collections" style="color: #000000;">My Favorites</a>
                     </li>
                 </ul>
