Fix the duplicate EIN issue

--- a/views/charity/charity.ejs
+++ b/views/charity/charity.ejs
@@ -87,7 +87,7 @@
                 </div>
             </div>
             <div id="editMyPageDiv" class="row" style="display: none">
-                <a href="#" id="editMyPageLink" style="float: right; padding-right: 5%">Edit My Page</a>
+                <a href="#" id="editMyPageLink" style="float: right; padding-right: 5%">Edit My Profile</a>
             </div>
 
             <div id="wrapper" class="container-fluid" >
