--- a/views/charity/charityEdit.ejs
+++ b/views/charity/charityEdit.ejs
@@ -51,7 +51,7 @@
     <div id="userId" style="display: none"><%=user.userId%></div>
     <div class="row">
         <div id="myPageDiv" class="row" >
-            <a href="/charity/<%=user.userId%>" id="myPageLink" style="float: right; padding-right: 5%">Back to My Page</a>
+            <a href="/charity/<%=user.userId%>" id="myPageLink" style="float: right; padding-right: 5%">Back to My Profile</a>
         </div>
         <h3>Account</h3>
         </hr>
