--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -31,23 +31,23 @@
 				    <li><b>Charity</b></li>
 				    <li> &nbsp;</li>
                     <li><a href="/recipient/signup">Register</a></li>
-					<li><a href="/recipient/login">Manager Login</a></li>
+					<li><a href="/recipient/login">Log In</a></li>
                 </ul>
             </div>
             <div class="col-md-3">
                 <ul>
-				    <li><b>Campaigns</b></li>
+				    <li><b>Campaign</b></li>
 				    <li> &nbsp;</li>
                     <li><a href="/campaign/signup">Register</a></li>
-					<li><a href="/campaign/login">Manager Login</a></li>
+					<li><a href="/campaign/login">Log In</a></li>
                 </ul>
             </div>
             <div class="col-md-3">
                 <ul>
 				    <li><b>Contributors</b></li>
 				    <li> &nbsp;</li>
-                    <li><a href="/login/signup">Sign up</a></li>
-					<li><a href="/login/signin">Sign in</a></li>
+                    <li><a href="/login/signup">Join</a></li>
+					<li><a href="/login/signin">Log In</a></li>
 					<li><a href="/charities/listCharities">List of Charities</a></li>
 					<li><a href="/campaign/listCampaigns">List of Campaigns</a></li>
                 </ul>
