--- a/views/login/signin.ejs
+++ b/views/login/signin.ejs
@@ -12,9 +12,9 @@
     <%activeMenu = "SignIn"%>
     <%include ../layout/navbar.ejs%>
 <div class="container" style="height:auto; min-height: 90%; margin: 0 auto -80px;">
-    <h2 class="form-signin-heading text-center">WillGive Login</h2>
+    <h2 class="form-signin-heading text-center">WillGive Sign In</h2>
     <hr align="left" width="100%" background="0xff0000">
-    <form id="userSignInForm" class="form-signin col-xs-4 col-xs-offset-1" action="/services/login/signin" method="post" style="padding-top: 2%">
+    <form id="userSignInForm" class="form-signin col-xs-4 col-xs-offset-1" action="/services/login/signin" method="post" style="padding-top: 10px">
         <div id="signInReporter" style="padding-bottom: 2%"></div>
         <% if (error) { %>
           <div class="text-center alert" style="color: red; font-size: small; font-style: italic; padding-bottom: 1% "> <%= error %> </div>
@@ -45,14 +45,15 @@
         </ul>
     </form>
     <div class="col-xs-2 text-center">
-        <h3>Or</h3>
+        &nbsp;<span style="vertical-align:-50px;"><h1>or</h1></span>
     </div>
-    <div class="col-xs-5" style="padding-top: 30px">
+    <div class="col-xs-5" style="padding-top: 50px; padding-bottom: 100px;">
         <a href="/auth/facebook" ><button class="btn btn-lg btn-facebook"><i class="fa fa-facebook"></i>f | Sign in with Facebook</button></a>
+		<P>
         <ul class="secondary note nobullet">
-            <li><span class="glyphicon glyphicon-home" aria-hidden="true"></span><span class="alt"> privacy:</span> We keep it private</li>
-            <li><span class="glyphicon glyphicon-home" aria-hidden="true"></span><span class="alt"> protection:</span> Share only with permission</li>
-            <li><span class="glyphicon glyphicon-home" aria-hidden="true"></span><span class="alt"> time:</span> Quick sign in, no passwords</li>
+            <li style="font-size:10px;"><span class="glyphicon glyphicon-home" aria-hidden="true"></span><span class="alt"> Privacy:</span> we keep it private</li>
+            <li style="font-size:10px;"><span class="glyphicon glyphicon-home" aria-hidden="true"></span><span class="alt"> Protection:</span> share only with permission</li>
+            <li style="font-size:10px;"><span class="glyphicon glyphicon-home" aria-hidden="true"></span><span class="alt"> Time:</span> quick sign in, no passwords</li>
         </ul>
     </div>
 </div>
@@ -62,8 +63,6 @@
     </div>
 </div>
 <%include ../layout/footer.ejs%>
-
-
 <script src="/jquery/dist/jquery.min.js"></script>
 <script src="/angular/angular.min.js"></script>
 <script src="/jquery-validation/dist/jquery.validate.js"></script>
