--- a/views/login/signup.ejs
+++ b/views/login/signup.ejs
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="/assets/css/social-buttons.css">
     <link rel="stylesheet" href="/assets/css/customJqueryValidation.css">
 </head>
-<body>
+<body style="background:url('/images/background1.jpg') no-repeat -10px 0px">
     <%activeMenu = "SignUp"%>
     <%include ../layout/navbar.ejs%>
 <div class="container" style="min-height: 70%">
-    <h2 class="form-signin-heading text-center">WillGive SignUp</h2>
+    <h2 class="form-signin-heading text-center">Join WillGive</h2>
     <hr align="left" width="100%" background="0xff0000">
     <form id="userSignupForm" class="form-signin col-xs-4 col-xs-offset-1"  method="post" style="padding-top: 2%">
         <div id="signUpReporter" style="padding-bottom: 2%"></div>
@@ -54,30 +54,37 @@
             <input type="password" id="signupPasswordConfirm" name="signupPasswordConfirm" class="form-control" placeholder="Confirm Password" equalTo="#signupPassword" minlength="8" required>
         </div>
         <div style="padding-bottom: 1%"> &nbsp;</div>
-        <button id="submitSignupFormButton" class="btn btn-lg btn-primary btn-block" type="submit" >SIGN UP</button>
+        <button id="submitSignupFormButton" class="btn btn-lg btn-primary btn-block" type="submit" >Join WillGive</button>
     </form>
     <div class="col-xs-2 text-center">
-        <h3>Or</h3>
+        &nbsp;<span style="vertical-align:-50px;"><h1>or</h1></span>
     </div>
     <div class="col-xs-5" style="padding-top: 2%">
-        <a href="/auth/facebook" ><button class="btn btn-lg btn-facebook"><i class="fa fa-facebook"></i>f | Sign up with Facebook</button></a>
-        <br>
+        <a href="/auth/facebook" ><button class="btn btn-lg btn-facebook"><i class="fa fa-facebook"></i>f | Sign in with Facebook</button></a>
+        <P>
         <ul class="secondary note nobullet">
-            <li><span class="glyphicon glyphicon-home" aria-hidden="true"></span><span class="alt"> privacy:</span> We keep it private</li>
-            <li><span class="glyphicon glyphicon-home" aria-hidden="true"></span><span class="alt"> protection:</span> Share only with permission</li>
-            <li><span class="glyphicon glyphicon-home" aria-hidden="true"></span><span class="alt"> time:</span> Quick sign in, no passwords</li>
+            <li style="font-size:10px;"><span class="glyphicon glyphicon-home" aria-hidden="true"></span><span class="alt"> Privacy:</span> we keep it private</li>
+            <li style="font-size:10px;"><span class="glyphicon glyphicon-home" aria-hidden="true"></span><span class="alt"> Protection:</span> share only with permission</li>
+            <li style="font-size:10px;"><span class="glyphicon glyphicon-home" aria-hidden="true"></span><span class="alt"> Time:</span> quick sign in, no passwords</li>
         </ul>
     </div>
 </div>
-
+<style>
+        a.signup{
+            color: #ffffc0;
+            text-decoration: none;
+        }
+        a:hover.signup {
+            color: white;
+        }
+</style>
 <div class="container" style="padding-top: 2%">
     <div class="text-center" >
-        By clicking “Sign Up” , you agree to WillGive's <a href='../terms'>Terms and Conditions</a> and <a href='../privacy'>Privacy Policy</a>.<br><br>
-        Already have an account? <a href="/login/signin">Sign In</a>
+        By joining you agree to the WillGive <a href='../terms' class=signup>Terms of Service</a> and <a href='../privacy' class=signup>Privacy Policy</a>.<br><br>
+        Already have an account? <a href="/login/signin" class=signup>Sign In</a>
     </div>
 </div>
 <%include ../layout/footer.ejs%>
-
 <script src="/jquery/dist/jquery.min.js"></script>
 <script src="/angular/angular.min.js"></script>
 <script src="/jquery-validation/dist/jquery.validate.js"></script>
