Fix footer issue for charity detail page. (the detail page missed </div>)

--- a/views/charity/charity.ejs
+++ b/views/charity/charity.ejs
@@ -228,7 +228,7 @@
           </div>
         </div>
     </div>
-
+    </div>
       <form id="form" action="/payment/stripePayment" method="POST" style="display:none;">
           <input id="amount"  name="amount" value="0">
           <input id="notes"  name="notes" value="0">
