--- a/views/login/userPledges.ejs
+++ b/views/login/userPledges.ejs
@@ -61,6 +61,7 @@
                             <th>Amount($)</th>
                             <th>Contribute To</th>
                             <th>Status</th>
+                            <th>Approve</th>
                         </tr>
                         </thead>
                         <tbody id="transactionHistoryTableBody">
@@ -79,6 +80,9 @@
 
     </div><!--/.row-->
 </div><!--/.container-->
+
+
+
 <%include ../layout/footer.ejs%>
 <script src="/jquery/dist/jquery.min.js"></script>
 <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -93,6 +97,7 @@
         ' <td class="text-center"> {Amount} </td> ' +
         ' <td> {Recipient} </td> ' +
         ' <td> {Status} </td> ' +
+        ' <td> <button type="button" id={ConfirmationId} onclick=\'approvePledge(this);\'>Approve</button></td>'
         ' </tr> ';
 
     function replaceHtml(transaction){
@@ -100,7 +105,7 @@
                 .replace("{Date}",dateTimeDisplayFormatter(transaction.dateTime))
                 .replace("{Amount}",transaction.amount)
                 .replace("{Recipient}",'<a href="/charity/'+transaction.recipientId+'" style="color: #202090">'+transaction.name+'</a>')
-                .replace("{Status}",transaction.status)
+                .replace("{Status}",transaction.status).replace("{ConfirmationId}",transaction.confirmationCode)
                 ;
 
     }
@@ -134,6 +139,71 @@
             }
         }
     }
+
+
+
+</script>
+
+    <form id="form" action="/payment/stripePayment" method="POST" style="display:none;">
+        <input id="amount"  name="amount" value="0">
+        <input id="notes"  name="notes" value="0">
+        <input id="receipientId"  name="receipientId" value="0">
+        <input id="stripeCustomerId"  name="stripeCustomerId" value="0">
+        <input id= stripeTokenInput type=hidden name=stripeToken />
+
+    </form>
+
+<script>
+
+    function refreshPage(){
+
+
+    }
+
+    function approvePledge(pb) {
+
+        var queryPledgeByConfirmationCode = '/payment/stripePayment/queryPledge/';
+
+        //alert(pb);
+
+        $.get(queryPledgeByConfirmationCode, { contributionConfirmationCode: "123"}, function (result) {
+            console.dir("queryPledgeByConfirmationCode: ");
+            if (!result || result == "failed") {
+                console.dir("failed to get results");
+                //update transaction histroy and mark status as complete
+                refreshPage();
+                return;
+            }
+            //alert("currentResults:"+ result);
+            stripeCustomerId = result[0];
+            amount =result[1];
+            receipientId =result[2];
+
+            jQuery("#amount").val(amount);
+            jQuery("#stripeCustomerId").val(stripeCustomerId);
+            jQuery("#receipientId").val(receipientId);
+
+            console.dir("stripeCustomerId(charity.ejs): " + stripeCustomerId);
+
+            //if stripCustomerId not null, then post to the payment page automatically
+            if ($.trim(stripeCustomerId)) {
+                jQuery("#stripeCustomerId").val(stripeCustomerId);
+
+                $('form').submit();
+
+                console.dir("payment successfully made ");
+                refreshPage();
+
+
+                return;
+            }
+
+
+
+
+        });
+    }
+
     function displayNoResults(){
         //resultConainer.empty();
         $('#botPage').empty();
